--- a/SIMPLE_DATABASE/Makefile
+++ b/SIMPLE_DATABASE/Makefile
@@ -1,4 +1,4 @@
-obj=struct_list_of_classes.h struct_item.h read_number.o read_string.o in_range.o try_input_string.o try_input_number.o a_to_size.o my_getch.o create_array.o print_all_items.o del_item.o save_pupils.o load_pupils.o sort_pupils.o add_item.o print_help.o create_list_of_classes.o load_list_of_classes.o search_class.o print_requires_more.o print_too_long.o add_class.o save_classes.o remove_class.o search_index_class.o 
+obj=struct_list_of_classes.h struct_item.h read_number.o read_string.o in_range.o try_input_string.o try_input_number.o a_to_size.o my_getch.o create_array.o print_all_items.o del_item.o save_pupils.o load_pupils.o sort_pupils.o add_item.o print_help.o create_list_of_classes.o load_list_of_classes.o search_class.o print_requires_more.o print_too_long.o add_class.o save_classes.o remove_class.o search_index_class.o search_pupil.o 
 database: main.c $(obj)
 	gcc $^ -o $@ -lm
 
